# Time-Management

./: .gitignore  CMakeLists.txt  README.md
docs/: DesignDocument.md
include/: AddTaskDialog.h  CommandLineInterface.h  EditTaskDialog.h  Scheduler.h  Task.h  TaskListDialog.h  TaskManager.h  User.h  Utils.h
src/: AddTaskDialog.cpp  CommandLineInterface.cpp  EditTaskDialog.cpp  Scheduler.cpp  Task.cpp  TaskListDialog.cpp  TaskManager.cpp  User.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
